--- a/assets/scss/modals/_profile.scss
+++ b/assets/scss/modals/_profile.scss
@@ -279,7 +279,7 @@
       }
       &.personal{
         .ps{
-          height: calc(100% - 100px);
+          height: calc(100% - 120px);
           overflow: hidden;
           form{
             position: relative;
